--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: BY Blog
+title: TXP Blog
 SEOTitle: 仝效鹏的博客 | TXP Blog
 header-img: img/post-bg-desk.jpg
 email: 2687656795@qq.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 仝效鹏的博客, txp, 仝效鹏, iOS, Apple, iPhone"
+keyword: "TXP, TXP Blog, 仝效鹏的博客, txp, 仝效鹏, iOS, Apple, iPhone, Android"
 url: "http://tongxp.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/Tongxp/tongxp.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
